--- a/functions-as-processes-haskell.cabal
+++ b/functions-as-processes-haskell.cabal
@@ -6,7 +6,8 @@ copyright:          2023 BenjaminCB
 maintainer:         benjamincb@hotmail.dk
 author:             BenjaminCB
 category:           Web
-homepage:           https://github.com/BenjaminCB/functions-as-processes-haskell
+homepage:
+  https://github.com/BenjaminCB/functions-as-processes-haskell
 
 -- TODO: Before hackage release.
 -- A short (one-line) description of the package.
@@ -23,18 +24,19 @@ extra-source-files:
   README.md
 
 common shared
-  ghc-options:
-    -Wall
-
+  ghc-options:        -Wall
   default-extensions:
     DeriveFoldable
     DeriveFunctor
     DeriveTraversable
+    ImportQualifiedPost
     OverloadedStrings
     TupleSections
 
+  other-modules:      Lambda
   build-depends:
     , base
+    , containers
 
   hs-source-dirs:     src
   default-language:   Haskell2010
